<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <RadioGroup
        android:id="@+id/patternGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="32dp">

        <RadioButton
            android:id="@+id/radioSteady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/pattern_steady" />

        <RadioButton
            android:id="@+id/radioStrobe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pattern_strobe" />

        <RadioButton
            android:id="@+id/radioSos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pattern_sos" />
    </RadioGroup>

    <Button
        android:id="@+id/startStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_start" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/status_idle"
        android:textSize="16sp" />

</LinearLayout>
